gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail4269d.d
version https://git-lfs.github.com/spec/v1
oid sha256:d941e24f0d84a863d398a29c2fd53d926ba52267d8c140a715c41408265053cf
size 155
